--- a/pi_site/index.html
+++ b/pi_site/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./assets/styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap"
@@ -13,7 +13,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://kit.fontawesome.com/990a2d20d7.js" crossorigin="anonymous"></script>
-    <title>Portfólio</title>
+    <title>Tapeçaria Imperial</title>
 </head>
 
 <body>
@@ -28,9 +28,9 @@
                     <span id="hamburguer"></span>
                 </button>
                 <ul id="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="contato.html">Contato</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/assets/html/sobre.html">Sobre</a></li>
+                    <li><a href="/assets/html/contato.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -40,7 +40,7 @@
         <div class="ag-format-container">
             <div class="ag-courses_box">
                 <div class="ag-courses_item">
-                    <a href="content.html" class="ag-courses-item_link">
+                    <a href="/assets/html/content.html" class="ag-courses-item_link">
                         <div class="ag-courses-item_bg"></div>
 
                         <div class="ag-courses-item_title">
@@ -207,7 +207,7 @@
         </div>
     </footer>
 
-    <script src="/Js/index.js"></script>
+    <script src="/assets/Js/index.js"></script>
 </body>
 
 </html>
